Tags property parsing refactoring (#36)
